// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package score;

service Score {
    rpc Set (SetMessage) returns (SetReply) {
    }
    rpc Get (GetMessage) returns (GetReply) {
    }
    rpc Reset (ResetMessage) returns (ResetReply) {
    }
}

//
// Message
//
message SetMessage {
    string nom = 1;
    int32 score = 2;
}
message GetMessage {
    string nom = 1;
}
message ResetMessage {
}


message SetReply {
}
message GetReply {
    int32 score = 1;
}
message ResetReply {
}